@@ -242,6 +242,8 @@ files[] = tests/handlers/views_handler_filter_string.test
 files[] = tests/handlers/views_handler_sort_random.test
 files[] = tests/handlers/views_handler_sort_date.test
 files[] = tests/handlers/views_handler_sort.test
+files[] = tests/test_plugins/views_test_plugin_access_test_dynamic.inc
+files[] = tests/test_plugins/views_test_plugin_access_test_static.inc
 files[] = tests/views_access.test
 files[] = tests/views_analyze.test
 files[] = tests/views_basic.test
